# pomotrack

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py  models.py
backend/app/api/: routes.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/sounds/: README.md
frontend/src/: App.vue
frontend/src/__tests__/: useKanban.test.ts  useSessionHistory.test.ts  useStorage.test.ts  useTimer.test.ts
frontend/src/api/: kanban.ts  sessions.ts  sync.ts
frontend/src/components/: KanbanPanel.vue  SessionLabel.vue  SettingsPanel.vue  StatsPanel.vue  SummaryModal.vue  TimerControls.vue  TimerDisplay.vue  index.ts
frontend/src/composables/: index.ts  useAudio.ts  useAzureSync.ts  useFavicon.ts  useKanban.ts  useKeyboardShortcuts.ts  useNotifications.ts  useSessionHistory.ts  useStorage.ts  useTheme.ts  useTimer.ts  useWakeLock.ts
frontend/src/styles/: main.css
